07-Apr-2013 Michael Babker
 # [#30091] Help Screens, key wrong, missing or not created correctly.  Thanks Mark Dexter
 # [#30428] nofollw not set correctly in mod_weblinks.  Thanks Ingo Wetsches
 # [#30209] Undefined index errors by using the style 'beezTabs' at an beez template.  Thanks Constantin Romankiewicz
 # [#30041] Use of '/' not being handled well on Windows Servers.  Thanks Parth Lawate

06-Apr-2013 Mark Dexter
 # [#30482] Fix tel validation in 2.5.x series. Thanks Don Gilbert.
 # [#30480] com_contact error in admin->view->contacts search "author:xxxx". Thanks Brent Cordis.

04-Apr-2013 Mark Dexter
 # Revert [#30430] Severe bug with "com_content" component routing.

04-Apr-2013 Jean-Mari Simonet
 # [#30430] Severe bug with "com_content" component routing. Thanks sajal soni.

28-Mar-2013 Jean-Marie Simonet
 # *Multilanguage 2.5: SIngle article display does not filter correctly author contact per language.
 # [#29417] sendMail automatically adds sender as replyTo. Thanks Roberto.

24-Mar-2013 Michael Babker
 # [#28978] Smart search (com_finder) - problem when using "Allow Empty Search".  Thanks Valentin

21-Mar-2013 Jean-Marie Simonet
# [#30346] *Contact creator does not include default language "All" for the contact created

20-Mar-2013 Jean-Marie Simonet
 # [#29982] Cant add fields to the category form using a plugin. Thanks Parth

18-Mar-2013 Jean-Marie Simonet
 # [#26860] A Contact name *must not* be unique. Thanks Christophe
 $ Updating Swahili intallation ini file

17-Mar-2013 Jean-Marie Simonet
 #+ [#29677] robots.txt in updates. Thanks Mark
 + [#29294] Show Correct Meta Titles in Joomla Admin for better usability. Thanks Parth
 # [#29810] File deletion issue. Thanks Elin
 # [#30312] *Porting to 2.5.x a 3.x improvement in languagefilter

16-Mar-2013 Michael Babker
 # [#30249] Show Intro Text = Hide currently has no effect in Featured and Category menu items.  Thanks Matt

16-Mar-2013 Jean-Marie Simonet